# varipaw

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: engineering-report.md
skills/: weather.md
skills/channel-safety/: SKILL.md
tests/: _offline_imports.py  test_adapters_channels_cli.py  test_adapters_channels_qq.py  test_adapters_channels_telegram.py  test_adapters_providers_base.py  test_adapters_providers_openai.py  test_app_bootstrap.py  test_capabilities_memory.py  test_capabilities_skills.py  test_capabilities_tools_base.py  test_capabilities_tools_registry.py  test_capabilities_tools_shell.py  test_capabilities_tools_web_reader.py  test_capabilities_tools_web_search.py  test_core_constants.py  test_core_contracts.py  test_core_loop.py  test_core_policies.py  test_core_validation.py  test_runtime_errors.py  test_runtime_logger.py  test_runtime_replay.py  test_runtime_trace.py
varipaw/adapters/channels/: cli_channel.py  qq_channel.py  telegram_channel.py
varipaw/adapters/providers/: base.py  openai_provider.py
varipaw/app/: bootstrap.py
varipaw/capabilities/memory/: base.py  chroma_store.py  router.py  sqlite_store.py
varipaw/capabilities/skills/: __init__.py  base.py  router.py  store.py
varipaw/capabilities/tools/: base.py  registry.py  shell.py  web_reader.py  web_search.py
varipaw/core/: constants.py  contracts.py  loop.py  policies.py  provider.py  validation.py
varipaw/runtime/: errors.py  logger.py  replay.py  trace.py
